--- a/app/globals.css
+++ b/app/globals.css
@@ -4,15 +4,9 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #39221E;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   color: var(--foreground);
